--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,37 @@ body {
   color: rgb(68, 100, 13);
   background-color: rgba(211, 168, 112, 0.6);
   text-align: center;
+  vertical-align: top;
   /* padding: 100px 0; */
   display: inline-block;
 }
 
 h2 {
   text-decoration: underline;
+}
+
+.bodytext {
+  border: 4px solid rgb(175, 130, 5);
+  border-radius: 25px;
+  background-color: rgba(211, 168, 112, 0.6);
+}
+
+.columnpets {
+  border: 4px solid rgb(175, 130, 5);
+  border-radius: 25px;
+  background-color: rgba(211, 168, 112, 0.6);
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.columnpets img {
+  max-width: 90%;
+  max-height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .sitelinks {
@@ -33,12 +58,14 @@ h2 {
     margin: 20px;
   }
 
+  /* This allows the entire box around the link to act as a button */
 .sitelinks a {
   border: 4px solid rgb(175, 130, 5);
   border-radius: 25px;
   background-color: rgba(211, 168, 112, 0.6);
   margin: 40px;
   text-align: center;
+  /* this allows the links to be displayed horizontally */
   display: inline-block;
   padding: 20px;
   text-decoration: none;
